0.0.6 : 2013-05-27
 - Merge o-types and o-attributes in to the main library.
 - New Trait and Constructor objects.
 - Redesign types so that each type is an object with coercions.
 - Migrate tests for QUnit to tap, and add many new tests.
 - Many many new tests.
 - Redesign Attribute.
 - Allow argKey to be nullable in attributes.
 - Support Type objects in o.writer.
 - Add a package.json for npm.
 - o.writer now returns the original value.
 - o.accessor returns the return value of o.writer if writing.
 - o.predicate now treats an undefined value as a lack of having.
 - Coercion now only validates against the first type, not parent
   types, since the value, before being coerced, will often times
   fail a parent's validation.

0.0.5 : 2013-04-14
 - Fix trailing commas in o-attribute.js breaking minification.

0.0.4 : 2013-04-14
 - Remove the option definition property.
 - Rename o.extend to o.augment.
 - Rename the default definition property to devoid.
 - Rename the extends definition property to augments.
 - Rename the isa definition property to type.
 - New primitive and object types for boolean, string, and number.
 - Added the nonEmptyString type.
 - Rename the extends type to instanceOf.
 - Added the typeOf type.
 - New arrayOf and objectOf types.
 - New attribute extention (o-attribute.js).
 - Add versions and version checking to the libraries.

0.0.3 : 2013-03-24
 - New types extension (o-types.js).

0.0.2 : 2013-03-18
 - Added o.construct.
 - o.extend now accepts a third argument to specify properties for the prototype.
 - Full test coverage of the Core API.
 - Fixed around to handle return values.
 - Fixed o.extend to properly inherit the parent's prototype
   instead of merging it with the child's.
 - Default isa to "object" if extends is set.

0.0.1 : 2013-03-10
 - First release!